[package]
name = "necrywagen"
version = "0.2.0"
edition = "2021"

authors = ["artegoser"]
license = "MIT"
description = "Crypto keys generator"
repository = "https://github.com/artegoser/necrywagen"
homepage = "https://github.com/artegoser/necrywagen"
documentation = "https://github.com/artegoser/necrywagen"
readme = "./README.md"
keywords = ["cli", "btc", "bitcoin", "crypto", "generator"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "cryptography",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "necrywagen"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.31.0", features = ["rand-std"] }
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.2"
num-format = "0.4.4"
regex = "1.10.2"
